--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -21,7 +21,10 @@
         <label for="name" class="col-sm-2 col-form-label">類別*：</label>
         <div class="col-sm-10">
           <select class="form-control" id="category" name="category">
-            <option>[類別]</option>
+            {{#each categories}}
+              <option value="{{this.id}}" {{#ifSelected this.id ../category}}{{/ifSelected}}>
+                {{this.name}}</option>
+            {{/each}}
           </select>
         </div>
       </div>
