--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,5 +1,6 @@
 <div class="row mt-5 justify-content-center">
   <div class="col-8">
+    {{>messages}}
     <form method="POST" action="{{{action}}}">
       <div class="form-group row">
         <div class="col-2"><span>*必填欄位</span></div>
