--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,7 +5,7 @@
         Register
       </h1>
       {{>messages}}
-      <form action="/users/register" method="POST">
+      <form action="/user/register" method="POST">
         <div class="form-group">
           Name</label>
           <input type="name" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{{name}}}" />
